  deprecated now.

- String methods lstrip(), rstrip() and strip() now take an optional
  argument that specifies the characters to strip.  For example,
  "Foo!!!?!?!?".rstrip("?!") -> "Foo". In addition, "200L".strip("L")
  will return "200". This is useful for replacing code that assumed
  longs will always be printed with a trailing "L".

Library

- Some fixes in the copy module: when an object is copied through its
  __reduce__ method, there was no check for a __setstate__ method on
  the result [SF patch 565085]; deepcopy should treat instances of
  custom metaclasses the same way it treats instances of type 'type'
  [SF patch 560794].

Build

- A bug was fixed that could cause COUNT_ALLOCS builds to segfault, or
  get into infinite loops, when a new-style class got garbage-collected.
  Unfortunately, to avoid this, the way COUNT_ALLOCS works requires
  that new-style classes be immortal in COUNT_ALLOCS builds.  Note that
  COUNT_ALLOCS is not enabled by default, in either release or debug
  builds, and that new-style classes are immortal only in COUNT_ALLOCS
  builds.  SourceForge bug 578752.

C API

Windows

- SF bug 595919:  popenN return only text mode pipes
  popen2() and popen3() created text-mode pipes even when binary mode
  was asked for.  This was specific to Windows.

- Sometimes the uninstall executable (UNWISE.EXE) vanishes.  One cause
  of that has been fixed in the installer (disabled Wise's "delete in-
  use files" uninstall option).


What's New in Python 2.2.1 final?
Release date: 10-Apr-2002
=================================

Core and builtins

- Added new builtin function bool() and new builtin constants True and
  False to ease backporting of code developed for Python 2.3.  In 2.2,
  bool() returns 1 or 0, True == 1, and False == 0.

- Fixed super() to work correctly with class methods.  [SF bug #535444]

- Fixed two bugs reported as SF #535905: under certain conditions,