@@ -24,6 +24,7 @@ test_mmap
   Ensuring that readonly mmap can't be write() to.
   Ensuring that readonly mmap can't be write_byte() to.
   Ensuring that readonly mmap can't be resized.
+  Opening mmap with size too big
   Opening mmap with access=ACCESS_WRITE
   Modifying write-through memory map.
   Opening mmap with access=ACCESS_COPY
